<resources>
    <string name="app_name">GuruKu Teacher</string>

    <!--LoginActivity-->
    <string name="txt_login">Masuk</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="txt_btn_login">Masuk</string>
    <string name="txt_btn_daftar">Daftar</string>

    <!--RegisterActivity-->
    <string name="txt_daftar">Registrasi Member</string>
    <string name="hint_fName">Nama Depan</string>
    <string name="hint_lName">Nama Belakang</string>
    <string name="hint_email">Email</string>
    <string name="hint_notlp">Nomor Telepon</string>
    <string name="hint_price">Tarif per Jam</string>
    <string name="hint_cPassword">Konfirmasi Password</string>

    <!--menu_nav_bottom-->
    <string name="title_student">Murid</string>
    <string name="title_transaction">Transaksi</string>
    <string name="title_history">Riwayat</string>
    <string name="title_akun">Akun</string>

    <!--AccountFragment-->
    <string name="tv_name">Nama</string>
    <string name="tv_saldo">Saldo</string>
    <string name="tv_about">Tentang</string>
    <string name="tv_logout">Keluar</string>

    <!--StudentFragmentment-->
    <string name="noData">Tidak Ada Permintaan</string>

    <!--TransactionFragment-->
    <string name="noDataTransaction">Tidak Ada Transaksi</string>

    <!--HistoryFragment-->
    <string name="noHistory">Tidak ada riwayat</string>

    <!--StudentItem-->
    <string name="tv_jam">jam</string>

    <!--BookingTeacherActivity-->
    <string name="activity_title_booking_teacher">Pemesanan</string>
    <string name="title_teacher_name">Nama Guru :</string>
    <string name="rb_title_one_h">1 Jam</string>
    <string name="rb_title_two_h">2 Jam</string>
    <string name="rb_title_three_h">3 Jam</string>
    <string name="title_payment_method">Pilih metode pembayaran</string>
    <string name="txt_not_confirm_1">Sebelum anda melakukan pembayaran, silahkan klik tombol \"Pesan Sekarang\" untuk melakukan pemesanan.</string>
    <string name="rb_title_wallet">Wallet</string>
    <string name="rb_title_cash">Tunai</string>
    <string name="txt_keterangan_wallet">Pastikan saldo yang anda miliki cukup untuk melakukan transaksi ini.</string>
    <string name="txt_keterangan_cash">Silahkan melakukan pembayaran secara cash kepada Guru yang bersangkutan dengan jumlah yang telah ditetapkan.</string>
    <string name="txt_attention">PERHATIAN: Apabila anda melakukan hal - hal yang dapat merugikan pihak manapun, maka akun anda akan dinonaktifkan secara permanen</string>
    <string name="txt_saldo_wallet">Saldo Wallet :</string>
    <string name="txt_btn_book_now">Pesan Sekarang</string>
    <string name="txt_btn_pay">Bayar</string>

    <!--DetailStudentActivity-->
    <string name="tv_payment_status">Status Pembayaran</string>
    <string name="tv_duration">Durasi</string>
    <string name="tv_location">Lokasi</string>
    <string name="activity_title_detail_student">Rincian Murid</string>
    <string name="txt_btn_acc">Terima</string>
    <string name="txt_btn_reject">Tolak</string>
    <string name="tv_status">Status</string>
    <string name="tv_media_social">Media Sosial</string>
    <string name="tv_no_wa">Nomor WhatsApp</string>
    <string name="tv_id_line">ID Line</string>
    <string name="txt_btn_simpan">Simpan</string>
    <string name="txt_btn_batal">Batal</string>
    <string name="tv_profile">Profile</string>

    <string name="activity_title_edit_profile">Edit Profile</string>
    <string name="tv_edit_profile">Ubah Profile</string>
    <string name="tv_date">Tanggal</string>
    <string name="tv_time">Waktu</string>
    <string name="tv_note">Catatan</string>
</resources>
