<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="15dp"
    tools:context="mbd.teacher.gurukuteacher.activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_login"
                android:textSize="32sp"
                android:textColor="@color/colorWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:textColor="@color/colorWhite"
                    android:singleLine="true"
                    android:fontFamily="sans-serif"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnDaftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_daftar"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn_click_daftar"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btnMasuk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_login"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn_click_masuk"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
