<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="15dp"
    tools:context="mbd.teacher.gurukuteacher.activity.RegisterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_daftar"
                    android:textSize="32sp"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_fName"
                        android:textColor="@color/colorWhite"
                        android:singleLine="true"
                        android:inputType="textCapWords"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_lName"
                        android:textColor="@color/colorWhite"
                        android:singleLine="true"
                        android:inputType="textCapWords"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:textColor="@color/colorWhite"
                        android:singleLine="true"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:textColor="@color/colorWhite"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilNoTlp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etNoTlp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_notlp"
                        android:textColor="@color/colorWhite"
                        android:inputType="number"
                        android:singleLine="true"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:textColor="@color/colorWhite"
                        android:singleLine="true"
                        android:fontFamily="sans-serif"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilCPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etCPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_cPassword"
                        android:textColor="@color/colorWhite"
                        android:singleLine="true"
                        android:fontFamily="sans-serif"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnDaftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_daftar"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn_click_daftar"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>
